adicionando funcionalidade de autenticacao e geracao de token